--- a/index.html
+++ b/index.html
@@ -22,36 +22,52 @@
                 <div class="main-menu">
                     <ul class="ul-menu">
                         <li>
-                            <a href="#">Inicio</a>
+                            <a href="index.html">Inicio</a>
                             <ul class="sub-menu">
-                                <li><a href="#">Home Two</a></li>
+                                <li><a href="#">Objetivo</a></li>
                             </ul>
                         </li>
                         <li>
-                            <a href="#">Objetivo</a>
+                            <a href="estadisticas.html">Estadisticas</a>
                         </li>
+                        <li><a href="diagnostico.html">Diagnostico</a></li>
                         <li>
-                            <a href="#">Courses</a>
+                            <a href="noticias.html">Noticias</a>
                         </li>
+                        <li><a href="evidencias.html">Evidencias</a></li>
                         <li>
-                            <a href="#">Pages</a>
-                            <ul class="sub-menu">
-                                <li><a href="#">About Us</a></li>
-                                <li><a href="#">Courses Page</a></li>
-                                <li><a href="#">Latest News</a></li>
-                                <li><a href="#">Shop Page</a></li>
-                                <li><a href="#">Contact Us</a></li>
-                            </ul>
+                            <a href="contacto.html">Contacto</a>
                         </li>
-                        <li><a href="#">Shop</a></li>
-                        <li><a href="#">Contact us</a></li>
                     </ul>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- CONTENEDOR GRIS -->
+    <div class="header-contacto">
+        <div class="contenedor">
+            <div class="div-info">
+                <!-- <a href="#">+0123456789</a>|<a href="#">example@example.com</a> -->
+            </div>
+        </div>
+    </div>
+    <div class="barra-verde">
+        <div class="triangulo-count"></div>
+        <div class="rect-count">
+            <ul class="ul-account">
+                <li>
+                    <a href=""><span><i class="fas fa-user"></i> Mi Cuenta</span></a>
+                </li>|&nbsp;&nbsp;
+                <li><a href="https://sindea.org.mx/" target="_blank"><span><i class="fas fa-link"></i> SINDEA</span></a>
+                </li>
+                |&nbsp;&nbsp;
+                <li><a href=""><span><i class="fas fa-shopping-bag"></i> Checkout</span></a>
+                </li>
+
+            </ul>
+        </div>
+    </div>
+
     <!--BANNER-->
     <div class="div-banner">
         <div class="contenedor">
@@ -59,41 +75,13 @@
                 <div class="bg-tenue">
                     <h2>Observatorio Nacional sobre</h2>
                     <h1>Detenciones Arbitrarias</h1>
-                    <p>For those, who won't settle for anything less.</p>
-                    <button type="button">Live Demo</button>
+                    <p>Recurso para la incidencia en las políticas públicas que garanticen los derechos humanos de las
+                        personas jóvenes.</p>
+                    <button type="button">Conoce más</button>
                 </div>
             </div>
         </div>
     </div>
-
-    <!-- <div class="header-contacto">
-        <div class="contenedor">
-            <div class="div-info">
-                <a href="#">+0123456789</a>|<a href="#">example@example.com</a>
-            </div>
-        </div>
-    </div> -->
-    <!-- <div class="barra-verde">
-        <div class="triangulo-count"></div>
-        <div class="rect-count">
-            <ul class="ul-account">
-                <li>
-                    <a href=""><span><i class="fas fa-user"></i> My account</span></a>
-                    <ul class="sub-menu">
-                        <li><a href="#">Wishlist</a></li>
-                        <li><a href="#">Checkout</a></li>
-                        <li><a href="#">Cart</a></li>
-                    </ul>
-                </li>
-                |&nbsp;&nbsp;
-                <li><a href=""><span><i class="fas fa-heart"></i> Wishlist</span></a>
-                </li>
-                |&nbsp;&nbsp;
-                <li><a href=""><span><i class="fas fa-shopping-bag"></i> Checkout</span></a>
-                </li>
-            </ul>
-        </div>
-    </div> -->
 
     <!-- CONTENEDOR WHY EDUCAT? -->
     <div class="div-why-educat">
@@ -115,7 +103,6 @@
         </div>
     </div>
 
-    <!-- CONTENEDOR LAST NEWS -->
     <div class="div-demos">
         <div class="contenedor">
             <div class="div-titulo-demos">
@@ -132,7 +119,7 @@
                             <button type="button">Mas</button>
                         </div>
                     </a>
-                    <p>Default</p>
+                    <p>Línea 1</p>
                 </div>
 
                 <div class="contenedor-demo">
@@ -144,7 +131,7 @@
                             <button type="button">Mas</button>
                         </div>
                     </a>
-                    <p>Blogixpo</p>
+                    <p>Línea 2</p>
                 </div>
 
                 <div class="contenedor-demo">
@@ -156,21 +143,33 @@
                             <button type="button">Mas</button>
                         </div>
                     </a>
-                    <p>Illustrix</p>
+                    <p>Línea 3</p>
                 </div>
             </div>
 
         </div>
     </div>
 
-    <!-- CONTENEDOR DE PIE DE PAGINA -->
-    <div class="div-footer">
+    <!-- CONTENEDOR WHY EDUCAT? -->
+    <div class="div-why-educat">
         <div class="barra-verde-why">
             <div class="rect-count-why">
-                <h2>SUBSCRIBE <br> TO OUR NEWSLETTER</h3>
+                <h2>OTRAS ORGANIZACIONES</h2>
             </div>
             <div class="triangulo-why"></div>
         </div>
+        <div class="contenedor">
+            <div class="div-text-why">
+                <p>El Observatorio Nacional sobre Detenciones Arbitrarias es un espacio de articulación en México,
+                    que incorpora organizaciones de la sociedad civil y colectivos de distintos estados- Ciudad de
+                    México, Morelos, San Luis Potosí, Chihuahua, Baja California.</p>
+                <a class="btn-read-more" href="#">Mas Información</a>
+            </div>
+        </div>
+    </div>
+
+    <!-- CONTENEDOR DE PIE DE PAGINA -->
+    <div class="div-footer">
         <div class="contenedor">
             <div class="div-info-footer">
                 <div>
@@ -179,22 +178,26 @@
                 </div>
                 <div class="div-contacto-footer">
                     <h3>CONTACTO</h3>
-                    <p><i class="fas fa-phone"></i>+88 012 345 37890</p>
+                    <p><i class="fas fa-phone"></i>+00 000 000 00000</p>
                     <p><i class="fas fa-envelope"></i>example@example.com</p>
                     <p><i class="fas fa-globe"></i>www.example.com</p>
-                    <p><i class="fas fa-map-marker"></i>ur address goes here,street.</p>
-
+                    <button type="button">
+                        <a class="btn-read-more" href="contacto.html">Mas Información</a>
+                    </button>
                 </div>
                 <div class="div-useful">
-                    <h3>Useful Links</h3>
-                    <p><a href="#">Shop</a></p>
-                    <p><a href="#">Become a Teacher</a></p>
-                    <p><a href="#">Profile</a></p>
-                    <p><a href="#">Courses</a></p>
-
+                    <h3>APLICACIÓN MÓVIL</h3>
+                    <div class="div-img-ig">
+                        <a href="https://play.google.com/store/apps/details?id=com.sindea&hl=es_MX" target="_blank"><img
+                                src="images/google_play.png"></a>
+                    </div>
+                    <div class="div-img-ig">
+                        <a href="https://apps.apple.com/mx/app/sindea/id1311757468" target="_blank"><img
+                                src="images/appstore.png"></a>
+                    </div>
                 </div>
                 <div>
-                    <h3>Redes Sociales</h3>
+                    <h3>REDES SOCIALES</h3>
                     <p>Puedes encontrarnos en:</p>
                     <div class="div-social-media">
                         <a href="https://www.facebook.com"><i class="fab fa-facebook"></i></a>
