--- a/noticias.html
+++ b/noticias.html
@@ -71,64 +71,62 @@
     <div class="div-last-news">
         <div class="contenedor">
             <div class="div-tittle">
-                <h3>Last News</h3>
-                <p>There are many variations of passages</p>
-                <i class="fas fa-graduation-cap"></i>
+                <h3>Noticias</h3>
             </div>
             <div class="div-recuadros">
                 <div class="div-item-recuadro">
                     <img src="iconos/265660-management/png/check-box.png">
                     <div class="div-info-rect">
-                        <h3><a href="#">There are many variations</a></h3>
+                        <h3><a href="#">Noticia 1</a></h3>
                         <div class="div-fecha">
-                            <span><i class="fas fa-calendar-check"></i>April 12, 2018</span>
+                            <span><i class="fas fa-calendar-check"></i>3 Julio de 2019</span>
                             <span><i class="fas fa-eye"></i>139</span>
                             <span><i class="fas fa-comments"></i>8</span>
                         </div>
-                        <p>There are many variaons of passages of Lorem Ipsuable, amrn</p>
-                        <a href="#">Read more</a>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        <a href="#">Leer más</a>
                     </div>
                 </div>
 
                 <div class="div-item-recuadro">
                     <img src="iconos/265660-management/png/administrator.png">
                     <div class="div-info-rect">
-                        <h3><a href="#">There are many variations</a></h3>
+                        <h3><a href="#">Noticia 2</a></h3>
                         <div class="div-fecha">
                             <span><i class="fas fa-calendar-check"></i>April 12, 2018</span>
                             <span><i class="fas fa-eye"></i>139</span>
                             <span><i class="fas fa-comments"></i>8</span>
                         </div>
-                        <p>There are many variaons of passages of Lorem Ipsuable, amrn</p>
-                        <a href="#">Read more</a>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        <a href="#">Leer más</a>
                     </div>
                 </div>
 
                 <div class="div-item-recuadro">
                     <img src="iconos/265660-management/png/circular-graphic.png">
                     <div class="div-info-rect">
-                        <h3><a href="#">There are many variations</a></h3>
+                        <h3><a href="#">Noticia 3</a></h3>
                         <div class="div-fecha">
                             <span><i class="fas fa-calendar-check"></i>April 12, 2018</span>
                             <span><i class="fas fa-eye"></i>139</span>
                             <span><i class="fas fa-comments"></i>8</span>
                         </div>
-                        <p>There are many variaons of passages of Lorem Ipsuable, amrn</p>
-                        <a href="#">Read more</a>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        <a href="#">Leer más</a>
                     </div>
                 </div>
 
                 <div class="div-item-recuadro">
                     <img src="iconos/265660-management/png/flats.png">
                     <div class="div-info-rect">
-                        <h3><a href="#">There are many variations</a></h3>
+                        <h3><a href="#">Noticia 4</a></h3>
                         <div class="div-fecha">
                             <span><i class="fas fa-calendar-check"></i>April 12, 2018</span>
                             <span><i class="fas fa-eye"></i>139</span>
                             <span><i class="fas fa-comments"></i>8</span>
                         </div>
-                        <p>There are many variaons of passages of Lorem Ipsuable, amrn</p>
-                        <a href="#">Read more</a>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        <a href="#">Leer más</a>
                     </div>
                 </div>
             </div>
