--- a/estadisticas.html
+++ b/estadisticas.html
@@ -63,9 +63,13 @@
                 |&nbsp;&nbsp;
                 <li><a href=""><span><i class="fas fa-shopping-bag"></i> Checkout</span></a>
                 </li>
-
             </ul>
         </div>
+    </div>
+
+    <div class="contenedor">
+        <h3>Casos Identificados</h3>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d26459982.0404894!2d-101.73392543456384!3d21.727325687497185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1ses!2smx!4v1573248717078!5m2!1ses!2smx" width="800" height="600" frameborder="0" style="border:0;" allowfullscreen=""></iframe>    
     </div>
 </body>
 
