--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="rect-count">
             <ul class="ul-account">
                 <li>
-                    <a href=""><span><i class="fas fa-user"></i> Mi Cuenta</span></a>
+                    <a href="login.html"><span><i class="fas fa-user"></i> Mi Cuenta</span></a>
                 </li>|&nbsp;&nbsp;
                 <li><a href="https://sindea.org.mx/" target="_blank"><span><i class="fas fa-link"></i> SINDEA</span></a>
                 </li>
@@ -125,7 +125,7 @@
                 <div class="contenedor-demo">
                     <a class="link-demo" href="#">
                         <div class="image">
-                            <img src="iconos/265660-management/png/bars-chart.png">
+                            <img src="iconos/265660-management/png/collaboration.png">
                         </div>
                         <div class="hover">
                             <button type="button">Mas</button>
@@ -137,7 +137,7 @@
                 <div class="contenedor-demo">
                     <a class="link-demo" href="#">
                         <div class="image">
-                            <img src="iconos/265660-management/png/collaboration.png">
+                            <img src="iconos/265660-management/png/bars-chart.png">
                         </div>
                         <div class="hover">
                             <button type="button">Mas</button>
@@ -159,11 +159,9 @@
             <div class="triangulo-why"></div>
         </div>
         <div class="contenedor">
-            <div class="div-text-why">
-                <p>El Observatorio Nacional sobre Detenciones Arbitrarias es un espacio de articulación en México,
-                    que incorpora organizaciones de la sociedad civil y colectivos de distintos estados- Ciudad de
-                    México, Morelos, San Luis Potosí, Chihuahua, Baja California.</p>
-                <a class="btn-read-more" href="#">Mas Información</a>
+            <div class="div-organizaciones">
+                <img src="images/logo.png">
+                <img src="images/EduciacLOGO.png">
             </div>
         </div>
     </div>
@@ -174,7 +172,6 @@
             <div class="div-info-footer">
                 <div>
                     <img src="images/logo.png">
-
                 </div>
                 <div class="div-contacto-footer">
                     <h3>CONTACTO</h3>
