--- a/estadisticas.html
+++ b/estadisticas.html
@@ -25,14 +25,16 @@
                             <a href="index.html">Inicio</a>
                             <ul class="sub-menu">
                                 <li><a href="#">Objetivo</a></li>
+                                <li><a href="#">Lineas de Trabajo</a></li>
+                                <li><a href="#">Organizaciones</a></li>
                             </ul>
                         </li>
                         <li>
-                            <a href="estadisticas.html">Estadisticas</a>
+                            <a href="noticias.html">Noticias</a>
                         </li>
                         <li><a href="diagnostico.html">Diagnostico</a></li>
                         <li>
-                            <a href="noticias.html">Noticias</a>
+                            <a href="estadisticas.html">Estadisticas</a>
                         </li>
                         <li><a href="evidencias.html">Evidencias</a></li>
                         <li>
@@ -56,12 +58,9 @@
         <div class="rect-count">
             <ul class="ul-account">
                 <li>
-                    <a href=""><span><i class="fas fa-user"></i> Mi Cuenta</span></a>
+                    <a href="login.html"><span><i class="fas fa-user"></i> Mi Cuenta</span></a>
                 </li>|&nbsp;&nbsp;
                 <li><a href="https://sindea.org.mx/" target="_blank"><span><i class="fas fa-link"></i> SINDEA</span></a>
-                </li>
-                |&nbsp;&nbsp;
-                <li><a href=""><span><i class="fas fa-shopping-bag"></i> Checkout</span></a>
                 </li>
             </ul>
         </div>
@@ -69,7 +68,9 @@
 
     <div class="contenedor">
         <h3>Casos Identificados</h3>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d26459982.0404894!2d-101.73392543456384!3d21.727325687497185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1ses!2smx!4v1573248717078!5m2!1ses!2smx" width="800" height="600" frameborder="0" style="border:0;" allowfullscreen=""></iframe>    
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d26459982.0404894!2d-101.73392543456384!3d21.727325687497185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1ses!2smx!4v1573248717078!5m2!1ses!2smx"
+            width="100%" height="500" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
     </div>
 </body>
 
