--- a/evidencias.html
+++ b/evidencias.html
@@ -25,14 +25,16 @@
                             <a href="index.html">Inicio</a>
                             <ul class="sub-menu">
                                 <li><a href="#">Objetivo</a></li>
+                                <li><a href="#">Lineas de Trabajo</a></li>
+                                <li><a href="#">Organizaciones</a></li>
                             </ul>
                         </li>
                         <li>
-                            <a href="estadisticas.html">Estadisticas</a>
+                            <a href="noticias.html">Noticias</a>
                         </li>
                         <li><a href="diagnostico.html">Diagnostico</a></li>
                         <li>
-                            <a href="noticias.html">Noticias</a>
+                            <a href="estadisticas.html">Estadisticas</a>
                         </li>
                         <li><a href="evidencias.html">Evidencias</a></li>
                         <li>
@@ -56,17 +58,15 @@
         <div class="rect-count">
             <ul class="ul-account">
                 <li>
-                    <a href=""><span><i class="fas fa-user"></i> Mi Cuenta</span></a>
+                    <a href="login.html"><span><i class="fas fa-user"></i> Mi Cuenta</span></a>
                 </li>|&nbsp;&nbsp;
                 <li><a href="https://sindea.org.mx/" target="_blank"><span><i class="fas fa-link"></i> SINDEA</span></a>
                 </li>
-                |&nbsp;&nbsp;
-                <li><a href=""><span><i class="fas fa-shopping-bag"></i> Checkout</span></a>
-                </li>
-
             </ul>
         </div>
     </div>
+
+
 </body>
 
 </html>
