--- a/index.html
+++ b/index.html
@@ -25,14 +25,16 @@
                             <a href="index.html">Inicio</a>
                             <ul class="sub-menu">
                                 <li><a href="#">Objetivo</a></li>
+                                <li><a href="#">Lineas de Trabajo</a></li>
+                                <li><a href="#">Organizaciones</a></li>
                             </ul>
                         </li>
                         <li>
-                            <a href="estadisticas.html">Estadisticas</a>
+                            <a href="noticias.html">Noticias</a>
                         </li>
                         <li><a href="diagnostico.html">Diagnostico</a></li>
                         <li>
-                            <a href="noticias.html">Noticias</a>
+                            <a href="estadisticas.html">Estadisticas</a>
                         </li>
                         <li><a href="evidencias.html">Evidencias</a></li>
                         <li>
@@ -146,6 +148,12 @@
                     <p>Línea 3</p>
                 </div>
             </div>
+
+        </div>
+    </div>
+
+    <div class="div-estadisticas">
+        <div class="contenedor">
 
         </div>
     </div>
