--- a/login.html
+++ b/login.html
@@ -7,8 +7,7 @@
 <html>
 
 <head>
-    <title>Login Page</title>
-    <!--Made with love by Mutiullah Samim -->
+    <title>Login</title>
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
