--- a/contacto.html
+++ b/contacto.html
@@ -25,14 +25,16 @@
                             <a href="index.html">Inicio</a>
                             <ul class="sub-menu">
                                 <li><a href="#">Objetivo</a></li>
+                                <li><a href="#">Lineas de Trabajo</a></li>
+                                <li><a href="#">Organizaciones</a></li>
                             </ul>
                         </li>
                         <li>
-                            <a href="estadisticas.html">Estadisticas</a>
+                            <a href="noticias.html">Noticias</a>
                         </li>
                         <li><a href="diagnostico.html">Diagnostico</a></li>
                         <li>
-                            <a href="noticias.html">Noticias</a>
+                            <a href="estadisticas.html">Estadisticas</a>
                         </li>
                         <li><a href="evidencias.html">Evidencias</a></li>
                         <li>
@@ -56,22 +58,34 @@
         <div class="rect-count">
             <ul class="ul-account">
                 <li>
-                    <a href=""><span><i class="fas fa-user"></i> Mi Cuenta</span></a>
+                    <a href="login.html"><span><i class="fas fa-user"></i> Mi Cuenta</span></a>
                 </li>|&nbsp;&nbsp;
                 <li><a href="https://sindea.org.mx/" target="_blank"><span><i class="fas fa-link"></i> SINDEA</span></a>
                 </li>
-                |&nbsp;&nbsp;
-                <li><a href=""><span><i class="fas fa-shopping-bag"></i> Checkout</span></a>
-                </li>
-
             </ul>
         </div>
     </div>
 
     <div class="contenedor">
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3695.418219430329!2d-100.97831888504798!3d22.148146985402803!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842aa20141f44bb3%3A0x6d73abf3a6c9b9ee!2sCalle%205%20de%20Mayo%20620%2C%20Centro%20Historico%2C%2078000%20San%20Luis%2C%20S.L.P.!5e0!3m2!1ses!2smx!4v1573229503511!5m2!1ses!2smx"
-            width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+        <h3>¡Contactanos!</h3>
+        <div class="div-contacto">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3695.418219430329!2d-100.97831888504798!3d22.148146985402803!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842aa20141f44bb3%3A0x6d73abf3a6c9b9ee!2sCalle%205%20de%20Mayo%20620%2C%20Centro%20Historico%2C%2078000%20San%20Luis%2C%20S.L.P.!5e0!3m2!1ses!2smx!4v1573229503511!5m2!1ses!2smx"
+                width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+        </div>
+
+        <div class="div-contacto" style="display: grid;">
+            <label>Nombre</label>
+            <input type="text">
+            <br>
+            <label>Email</label>
+            <input type="email">
+            <br>
+            <label>Telefono</label>
+            <input type="text">
+            <br>
+            <button type="button">Enviar</button>
+        </div>
     </div>
 </body>
 
